sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value temp
				setValeur(i,temp)
                                            ^AlgBubbleSort1:8: error: not found: value temp
				setValeur(i+1,temp)
                                              ^AlgBubbleSort1:9: error: not enough arguments for method setValeur: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
				setValeur(i,setValeur(i+1))
                                                     ^