sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var sorted = false;
	while (!sorted) { 
		for (i<- 0 to 8) {
			if (getValeur(i) < getValeur(i+1)) {
				setValeur(i,temp)
				setValeur(i+1,temp)
				setValeur(i,setValeur(i+1))
			}
		}
		sorted = true; 
	
	}
	
}
